fixed issue with intro section not covering the whole viewport on mozilla

--- a/src/styles/components/intro.sass
+++ b/src/styles/components/intro.sass
@@ -3,7 +3,7 @@
   background-size: cover
   background-attachment: fixed
   width: 100%
-  min-height: 100vh
+  height: 100vh
   display: table
   position: relative
   text-align: center
